--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
     </div>
     </div>
     <!-- ここからmenu -->
+    <br>
+    
       <br>
       <div id="menu-txt" class="menu-txt">
-        <h1>-MENU-</h1>
+        <h1><img src="img/menu.png"></h1>
         <br>
         <div class="menu-photo drink">
           <p>-DRINK-</p>
@@ -61,13 +63,18 @@
           <p>-SANDWICH-</p>
           <img src="img/sandwich.jpg" alt="food写真">
         </div>
-       <br>
+       <br><br><br>
+
+       <hr size="10" width="80%" color="#6c3524">
+
        <div class="center-txt">
          <!-- 以下文章 -->
+         <div><img src="img/当店のおすすめ.png"></div>
          <p class="cafe-txt">日本でもおなじみ、「パンケーキ」は一括りで呼ばれることが多いですが、実は｢フラップジャック｣、｢ホットケーキ｣、｢グリドルケーキ｣などいろいろな名前があります。バターと本物のメープルシロップをつけて食べる点ではどれも同じで、当店のパンケーキは大きめサイズ、周りはサックリ、口の中に入れるとシュワっと軽い口どけ。この食感は焼きたてでないと味わえません。甘さは控えめの生地なので、大きくてもペロっと食べれてしまうと好評です。アイスクリームやフルーツ、ジャムなど、色々なトッピングが楽しめますが、シンプルに粉砂糖のみで味わうのもおすすめです。時間が経つと生地がすぐにしんなりしてしまい食感が損なわれますのでぜひお早めにどうぞ!</p>
        </div>
        <br>
-
+       <hr size="10" width="80%" color="#6c3524">
+       <br><br>
         <section id="location">
           <div class="wrapper-log">
             <div class="location-info">
@@ -82,11 +89,13 @@
                 定休日: 毎週水曜日
               </p>
             </div>
+            <br><br><br><br>
             <div class="location-map">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3132.834866011775!2d140.88024881468843!3d38.26013579185995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f8a28180c510b87%3A0xb2a30b91be1ffdbc!2z5LuZ5Y-w6aeF!5e0!3m2!1sja!2sjp!4v1604754179152!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
           </div>
         </section>
+        <br><br><br><br><br><br>
        <footer>
         <div class="container">
           <div class="footer-left">
